--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="es" translate="no" class="notranslate">
+<head>
     <meta charset="UTF-8" />
+    <meta name="google" content="notranslate" />
+    <meta http-equiv="Content-Language" content="es" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zurpack</title>
-    <link rel="icon" href="images/logo.png" type="image/x-icon" />
-  </head>
-  <body>
+</head>
+<body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-  </body>
+</body>
 </html>
