--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="es" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <link rel="icon" type="image/x-icon" href="/images/logo.png" />
     <title>Zurpack</title>
 </head>
 <body>
